Fixed contrast ratio

--- a/src/assets/styles/components/Contact.styl
+++ b/src/assets/styles/components/Contact.styl
@@ -43,7 +43,7 @@
 
 .form button
   background #93ca3f
-  color baseColor
+  color semiDark
   padding 15px
   border-radius 2px
   border none
