--- a/src/assets/styles/components/Hero.styl
+++ b/src/assets/styles/components/Hero.styl
@@ -54,6 +54,7 @@
   cursor pointer
   text-decoration none
   &:hover
+    color semiDark
     background highlightColor2
     border 1px solid highlightColor2
     transition all 0.5s
